@@ -1,4 +1,7 @@
-2012-06-24  6.7.7-8 Cristy  <quetzlzacatenango@image...>
+2012-06-25  6.7.7-10 Cristy  <quetzlzacatenango@image...>
+  * Permit linear RGB for PNM and TIFF image formats.
+
+2012-06-24  6.7.7-9 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.7-9, SVN revision 8460.
 
 2012-06-23  6.7.7-9 Cristy  <quetzlzacatenango@image...>
